实现基于安全管理器限制用户程序某些权限的功能